Update inference tutorial notebook

--- a/toto/notebooks/inference_tutorial.ipynb
+++ b/toto/notebooks/inference_tutorial.ipynb
@@ -60,7 +60,11 @@
     "\n",
     "You'll need to run this with a CUDA-capable device. In order to get the fastest inference performance, please use an Ampere or newer architecture, as these support the xFormers fused kernel implementations for SwiGLU and Memory-Efficient Attention.\n",
     "\n",
-    "Make sure you've cloned the repo and installed dependencies with `pip install -r requirements.txt`. When running this notebook, make sure the working directory is set to `<repository_root>/toto`.\n",
+    "### Installation\n",
+    "Install from PyPI: \n",
+    "```bash\n",
+    "    pip install toto-ts\n",
+    "```\n",
     "\n",
     "This notebook also assumes that you've downloaded the `ETT-small` dataset locally. It can be obtained from the [official repo](https://github.com/zhouhaoyi/ETDataset).\n",
     "\n",
